# dspy-security-bench

./: .gitignore  ARCHITECTURE.md  CITATION.cff  LEADERBOARD.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
assets/: _methodology_flow.mmd
blog/: v0.1-launch.md
data/results/: banking_defense_mistral_mistral_large_latest_results.csv  banking_defense_mistral_mistral_large_latest_summary.csv  lm_driven_attack_mistral_mistral_large_latest.json  workspace_defense_mistral_mistral_large_latest_adaptive_results.csv  workspace_defense_mistral_mistral_large_latest_adaptive_summary.csv  workspace_defense_mistral_mistral_large_latest_results.csv  workspace_defense_mistral_mistral_large_latest_summary.csv  workspace_defense_mistral_mistral_medium_latest_results.csv  workspace_defense_mistral_mistral_medium_latest_summary.csv  workspace_v01_deepseek_results.csv  workspace_v01_deepseek_summary.csv  workspace_v01_mistral_mistral_large_latest_results.csv  workspace_v01_mistral_mistral_large_latest_summary.csv  workspace_v01_mistral_mistral_small_latest_results.csv  workspace_v01_mistral_mistral_small_latest_summary.csv  workspace_v01_results.csv  workspace_v01_summary.csv  workspace_v02_phase1_seed1_results.csv  workspace_v02_phase1_seed2_results.csv  workspace_v02_phase1_seeds_all.csv  (+1 more)
docs/: ci.md
dspy_security_bench/: cli.py  defenses.py  llm_judge.py  optimizers.py  runner.py
examples/: .dspy-security-bench.yaml  injection-scan.yml
leaderboard/: models.yaml  protocol.yaml
scripts/: estimate_cost.py  estimate_phase2_crossmodel.py  generate_adaptive_figure.py  generate_defense_figures.py  generate_leaderboard.py  generate_v013_figures.py  generate_v014_figures.py  generate_v01_figures.py  make_story_video.py  push_trainset_to_hf.py  push_v01_results_to_hf.py  rescore_leaderboard.py  run_defense_experiment.py  run_leaderboard.py  run_lm_driven_attack.py  run_v01_benchmark.py  run_v01_deepseek_probe.py  run_v01_provider_probe.py  run_v02_phase1.py  run_v02_phase1_seeds.py  smoke_test_provider.py  verify_injection_trace.py
tests/: conftest.py  test_adapter_agentdojo.py  test_adaptive_attacks.py  test_defenses.py  test_extract_env_data.py  test_generator.py  test_generic_agent.py  test_llm_judge.py  test_lm_driven_attack.py  test_optimizers.py  test_runner.py  test_scan.py  test_validator.py
(+17 files in other folders)
