[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dspy-security-bench"
version = "0.1.0"
description = "Measure how DSPy prompt optimization affects the prompt-injection robustness of agentic LLM programs, using AgentDojo's attack suite."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Imran Ahamed", email = "immu4989@gmail.com" },
]
requires-python = ">=3.10"
keywords = [
    "dspy",
    "agentdojo",
    "prompt-injection",
    "llm-security",
    "agent-evaluation",
    "robustness",
    "benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "dspy>=3.3.0b1",  # ReActV2 requires this beta — released as part of the canonical-tool-call work
    "agentdojo",
    "litellm>=1.50",
    "json-repair>=0.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/immu4989/dspy-security-bench"
Repository = "https://github.com/immu4989/dspy-security-bench"
Issues = "https://github.com/immu4989/dspy-security-bench/issues"

[project.scripts]
dspy-security-bench-synthesize = "dspy_security_bench.synthesis.generator:_cli"
dspy-security-bench-validate = "dspy_security_bench.synthesis.validator:_cli"

[tool.hatch.build.targets.wheel]
packages = ["dspy_security_bench"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
